# parallel-prog

./: .gitignore  CMakeLists.txt  README.md  experiment_results.csv  generate_matrix.py  matrix_mult.cpp  plot_results.py  run_experiments.py
lab1/: CMakeLists.txt  experiment_results.csv  matrix_mult.cpp  plot_results.py  run_experiments.py  verify.py
lab2/: CMakeLists.txt  CMakeSettings.json  README.md  analyze_results.py  experiment_results.csv  generate_matrix.py  matrix_mult.cpp  run_experiments.py
lab3/: CMakeLists.txt  README.md  analyze_results.py  experiment_results.csv  matrix_mpi.cpp  run_experiments.py  run_job.slurm  verify.py
